# BrilliantUtf8

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: BrilliantUtf8.hpp  CMakeLists.txt  Decode.hpp  DecodeError.hpp  Util.hpp
test/: CMakeLists.txt  CodePointTest.cpp  DecodeTest.cpp  quickbrown_expectedout.hpp
